cluster/talos/omni/phillips-homelab/manifests/namespaces.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  labels:
    name: argocd
---
apiVersion: v1
kind: Namespace
metadata:
  name: gateways
  labels:
    name: gateways
---
apiVersion: v1
kind: Namespace
metadata:
  name: synology-csi
  labels:
    name: synology-csi
---
